--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
     "next-share": "^0.27.0",
+    "next-videos": "^1.4.1",
     "react": "^18",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18",
